--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 </head>
 
 <body>
+
+
+    <nav class="main-nav">
+        <img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt="TVshow" title="Watch all your fouvrit Tv shows." class="logo">
+
+
+        <h1 class="nav-title">TV show Project</h1>
+
+    </nav>
+
+    <input type="text" id="myInput" placeholder="Search for Episodes" class="input-class" value="" />
+
     <div id="root">
     </div>
+
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
