--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt="TVshow" title="Watch all your fouvrit Tv shows." class="logo">
 
 
-        <h1 class="nav-title">TV show Project</h1>
+        <h1 class="nav-title">TV Show Project</h1>
 
     </nav>
 
@@ -26,7 +26,12 @@
     <div id="root">
     </div>
 
-
+    <footer class="footer">
+        <p>Tvmaze</p>
+        <a href="https://tvmaze.com">
+            <img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt="tvmaze" class="img">
+        </a>
+    </footer>
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
 
